attempting to fix bug on iPhone 6 size, changed margin to padding on wireframes div

--- a/css/main.css
+++ b/css/main.css
@@ -657,7 +657,7 @@ body {
     .wireframes {
       flex-direction: column;
       align-items: center;
-      margin-bottom: 14em; } }
+      padding-bottom: 14em; } }
   .wireframes .dropdown-content {
     opacity: 0;
     position: absolute; }
