--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -765,7 +765,7 @@ body {
   @media screen and (max-width: 670px) {
     flex-direction: column;
     align-items: center;
-    margin-bottom: 14em;
+    padding-bottom: 14em;
   }
   .dropdown-content {
     opacity: 0;
